--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shellyplug-exporter-rs"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 [profile.release]
@@ -16,3 +16,4 @@ serde_json = "1.0.113"
 tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
 serde = { version = "1.0.196", features = ["derive"] }
 prometheus_exporter = "0.8.5"
+compile-time = "0.2.0"
